--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-spring.datasource.url=jdbc:mariadb://localhost:3307/wells2db
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/online_bank
 spring.datasource.username=root
-spring.datasource.password=password
-
-spring.jpa.show-sql=true
+spring.datasource.password=Subhadip123*
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
