--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/bank
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=Password@1
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/online_bank
+#spring.datasource.url=jdbc:mariadb://localhost:3306/bank
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.datasource.username=root
-#spring.datasource.password=Subhadip123*
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.password=Password@1
+#
 #spring.jpa.hibernate.ddl-auto=update
-#logging.level.org.springboot.web.cors=DEBUG
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+spring.datasource.url=jdbc:mysql://localhost:3306/online_bank
+spring.datasource.username=root
+spring.datasource.password=Subhadip123*
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springboot.web.cors=DEBUG
 
